--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "mongodb": "^6.8.0",
     "next": "15.0.0-rc.0",
+    "prisma": "^5.16.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
