--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@prisma/client": "^5.16.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "mongodb": "^6.8.0",
     "next": "15.0.0-rc.0",
-    "prisma": "^5.16.1",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "svix": "^1.24.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
