--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.2.2",
-    "@prisma/client": "^5.16.1",
+    "@clerk/nextjs": "^5.1.4",
+    "@prisma/client": "^5.15.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
-    "mongodb": "^6.8.0",
     "next": "15.0.0-rc.0",
+    "next-cloudinary": "^6.6.2",
+    "prisma": "^5.15.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "svix": "^1.24.0"
+    "svix": "^1.24.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,7 +27,6 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8",
-    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
